# rules_ios

./: .bazelrc
tests/ios/app/: BUILD.bazel  Info.plist
tests/ios/extensions/: BUILD.bazel
