load("//rules:extension.bzl", "ios_extension")
load("//rules:framework.bzl", "apple_framework")

apple_framework(
    name = "ExtensionLib",
    srcs = glob(["ExampleExtension/*.swift"]),
    platforms = {"ios": "10.0"},
    swift_version = "5.1",
    visibility = ["//visibility:public"],
    deps = ["//tests/ios/app:FW"],
    link_dynamic = False
)

ios_extension(
    name = "ExampleExtension",
    bundle_id = "com.example.app.example-extension",
    families = [
        "iphone",
    ],
    infoplists = [
        "ExampleExtension/Info.plist",
    ],
    minimum_os_version = "10.0",
    visibility = ["//visibility:public"],
    deps = [
        ":ExtensionLib",
    ],
)

ios_extension(
    name = "ExampleExtensionWithDylibs",
    bundle_id = "com.example.app.example-extension",
    families = [
        "iphone",
    ],
    infoplists = [
        "ExampleExtension/Info.plist",
    ],
    minimum_os_version = "10.0",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/ios/frameworks/dynamic/a",
    ],
)

ios_extension(
    name = "ExampleExtensionWithTestOnly",
    testonly = True,
    bundle_id = "com.example.app.example-extension",
    families = [
        "iphone",
    ],
    infoplists = [
        "ExampleExtension/Info.plist",
    ],
    minimum_os_version = "10.0",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/ios/frameworks/testonly:SwiftLibrary",
    ],
)
